Update JMX